--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,63 @@ a{
   display: block;
   padding: 20px;
 }
+
+.content {
+  margin-top: auto;
+  align-items: center;
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  overflow: hidden;
+  position: relative;
+}
+
+.navigation {
+  align-items: center;
+  position: relative;
+  left: 50%;
+  top: 10%;
+  display: flex;
+}
+
+.bar  {
+  width: 70px;
+  height: 17px;
+  border: 2px solid black;
+  margin: 6px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: .4s;
+}
+
+.bar:hover  {
+  background: black;
+}
+
+.hidden  {
+  display: none;
+}
+
+.slides {
+  display: flex;
+  width: 300%;
+  height: 100%;
+}
+
+.slide img {
+  width: 100%;
+  height: 100%;
+  flex: 1 1 200px;
+}
+
+#slide1:checked ~ .s1{
+  margin-left: 0;
+}
+
+#slide2:checked ~ .s1{
+  margin-left: -50%;
+}
+
+#slide3:checked ~ .s1{
+  margin-left: -200%;
+}
