--- a/css/style.css
+++ b/css/style.css
@@ -50,13 +50,14 @@ a{
 
 .navigation {
   align-items: center;
-  position: relative;
+  position: absolute;
   left: 50%;
-  top: 10%;
+  top: 99%;
   display: flex;
 }
 
 .bar  {
+  align-items: center;
   width: 70px;
   height: 17px;
   border: 2px solid black;
@@ -81,8 +82,9 @@ a{
 }
 
 .slide img {
-  width: 100%;
-  height: 100%;
+  align-items: center;
+  width: 50%;
+  height: 50%;
   flex: 1 1 200px;
 }
 
